; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_hotkey_pressed.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_hotkey_pressed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.python_obs_callback = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"(O)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @hotkey_pressed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hotkey_pressed(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.python_obs_callback*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.python_obs_callback*
  store %struct.python_obs_callback* %10, %struct.python_obs_callback** %5, align 8
  %11 = load %struct.python_obs_callback*, %struct.python_obs_callback** %5, align 8
  %12 = getelementptr inbounds %struct.python_obs_callback, %struct.python_obs_callback* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  br label %37

17:                                               ; preds = %2
  %18 = load %struct.python_obs_callback*, %struct.python_obs_callback** %5, align 8
  %19 = call i32 @lock_callback(%struct.python_obs_callback* %18)
  %20 = load i32, i32* %4, align 4
  %21 = call i32* @PyBool_FromLong(i32 %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32* @Py_BuildValue(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %22)
  store i32* %23, i32** %7, align 8
  %24 = load %struct.python_obs_callback*, %struct.python_obs_callback** %5, align 8
  %25 = getelementptr inbounds %struct.python_obs_callback, %struct.python_obs_callback* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i32* @PyObject_CallObject(i32 %26, i32* %27)
  store i32* %28, i32** %8, align 8
  %29 = call i32 (...) @py_error()
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @Py_XDECREF(i32* %30)
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @Py_XDECREF(i32* %32)
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @Py_XDECREF(i32* %34)
  %36 = call i32 (...) @unlock_callback()
  br label %37

37:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @lock_callback(%struct.python_obs_callback*) #1

declare dso_local i32* @PyBool_FromLong(i32) #1

declare dso_local i32* @Py_BuildValue(i8*, i32*) #1

declare dso_local i32* @PyObject_CallObject(i32, i32*) #1

declare dso_local i32 @py_error(...) #1

declare dso_local i32 @Py_XDECREF(i32*) #1

declare dso_local i32 @unlock_callback(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
